<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Imagen de fondo -->
    <ImageView
        android:id="@+id/imgFondo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo_supermercado"
        android:contentDescription="@string/app_name"
        android:alpha="0.2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Campo Código -->
    <EditText
        android:id="@+id/txtCodigo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_codigo"
        android:padding="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        android:layout_margin="20dp" />

    <!-- Campo Descripción -->
    <EditText
        android:id="@+id/txtDescripcion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_descripcion"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/txtCodigo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="12dp" />

    <!-- Campo Precio -->
    <EditText
        android:id="@+id/txtPrecio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_precio"
        android:inputType="numberDecimal"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/txtDescripcion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="12dp" />

    <!-- Botón Guardar -->
    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_guardar"
        app:layout_constraintTop_toBottomOf="@id/txtPrecio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
